wp-content/themes/octiv2017/src/scss/module/_header.scss
.site-header-menu-open {
  @include mobile {
    overflow: hidden;
    position: relative;
    height: 100%;
  }
}

.site-header {
  background-color: $white;
  position: relative;
  z-index: 3;
  box-shadow: 3px 5px 10px rgba(black, 0.2);
  .site-header-fixed & {
    position: fixed;
    left: 0;
    right: 0;
    top: 0;
    z-index: 100;
  }
  .site-header-menu-open & {
    // overflow: scroll;
    bottom: 0;
    @include desktop {
      // overflow: auto;
      bottom: auto;
    }
  }
}

.site-header-fixed .site-header-nav-container {
  @include mobile {
    top: 4.1rem;
  }
}

.site-header-top-items {
  display: flex;
  justify-content: space-between;
  align-items: center;
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.site-header-logo {
  width: 100%;
  max-width: 150px;
  min-height: 50px;
  padding: 1rem 0;
  @include desktop {
    max-width: 185px;
    padding: 0;
  }
}

.site-header-nav-container {
  transform: translateY(-100%);
  flex-grow: 2;
  z-index: -1;
  opacity: 0;
  position: fixed;
  background-color: transparent;
  top: 6.1rem;
  left: 0;
  width: 100%;
  transition: all 300ms ease-in-out;
  border-top: 1px solid $mgray;
  overflow: scroll;
  height: calc(100% + 500px);
  @include desktop {
    overflow: initial;
    height: auto;
    border-top: 0;
    z-index: auto;
    transform: translateY(0);
    opacity: 1;
    position: relative;
    background-color: transparent;
    top: auto;
    left: auto;
    width: auto;
  }

  .site-header-menu-open & {
    transform: translateY(0);
    opacity: 1;
    background-color: $white;
  }
}

.site-header-rad-container {
  display: none;
  @include desktop {
    display: block;
  }
}

.site-header-menu-toggle {
  @include desktop {
    display: none;
  }  
}

.top-level-navigation {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  list-style-type: none;
  padding: 0;
  margin: 0;
  @include desktop {
    margin-right: 1rem;
    flex-direction: row;
  }

  > li {
    position: relative;
    border-bottom: 1px solid $lgray;

    &:after {
      content: "+";
      display: block;
      position: absolute;
      top: 0.5rem;
      left: calc(100% - 2rem);
      font-size: 2em;
      font-weight: bold;
      transition: transform 400ms ease-in-out;
    }
    &.active:after {
      transform: rotate(45deg);
    }
    @include desktop {
      border-bottom: 0;

      &:after {
        content: none;
      }
      &:last-child {
        margin-right: 0;
      }
      &:hover .sub-menu {
        opacity: 1 !important;
        visibility: visible;
      }
    }

    a {
      color: $gray;
      display: block;
      padding: 1rem;
      text-decoration: none;
      transition: all 200ms ease-in-out;
      @include desktop {
        padding: 2rem 1rem;
        &:hover,
        &:focus {
          color: $white !important;
          outline: none;
          color: $white;
          background-color: $brand2;
        }
      }
    }

    &:nth-child(2) {
      @include desktop {
        a {
          color: $gray;
          &:hover,
          &:focus {
            background-color: $brand3;
          }
        }
      }
    }

    &:nth-child(3) {
      @include desktop {
        a {
          color: $gray;
          &:hover,
          &:focus {
            background-color: $brand4;
          }
        }
      }
    }

    &:nth-child(4) {
      @include desktop {
        a {
          color: $gray;
          &:hover,
          &:focus {
            background-color: $brand5;
          }
        }
      }
    }

  }
}

.site-header .sub-menu {
  display: none;
  transition: all 200ms ease-in-out;
  list-style-type: none;
  padding: 0;
  margin: 0;
  left: 0;
  right: 0;
  background-color: $gray;
  @include desktop {
    left: auto;
    right: auto;
    position: absolute;
    display: block;
    opacity: 0;
    visibility: hidden;
    min-width: 200px;
    border-radius: 0 0 5px 5px;
  }
  a {
    padding: 0.5rem 0 !important;
    color: darken($white, 20%) !important;
    border-bottom: 1px solid lighten($gray, 20%);
    margin-left: 1rem;
    margin-right: 1rem;
    @include desktop {
      &:hover,
      &:focus {
        color: $white !important;
      }
      border-bottom: 0;
      padding: 0.5rem 1rem !important;
      margin-left: 0;
      margin-right: 0;
      width: calc(100% + 2rem);
      position: relative;
      left: -1rem;
    }
  }
  li {
    @include desktop {
      border-bottom: 1px solid lighten($gray, 20%);
      margin-left: 1rem;
      margin-right: 1rem;
      &:last-child {
        border-bottom: 0;
      }
    }
  }
  li:first-child {
    padding-top: 1rem;
    @include desktop {
      padding-top: 0;
    }
  }
  li:last-child {
    padding-bottom: 1rem;
    @include desktop {
      padding-bottom: 0;
    }
    a {
      border-bottom: 0;
    }
  }
}

.site-header-mobile-only {
  @include desktop {
    display: none;
  }
}



.hamburger-container {
  margin-right: -0.5rem;

  rect {
    transition: all 200ms ease-in-out;
  }
  .hamburger-inner,
  .hamburger-inner:before,
  .hamburger-inner:after {
    transition: all 200ms ease-in-out;
  }
  &:focus,
  &:hover {
    outline: none;
    .hamburger-inner,
    .hamburger-inner:before,
    .hamburger-inner:after {
      background-color: $gray;
    }
  }
}

